2014-10-14 Ola Jeppsson <ola@adapteva.com>
	* src/e-hal/Makefile:
	Link with -lpthreads. e-shm API uses POSIX semaphores.

2014-08-14 Andreas Olofsson <andreas@adapteva.com>
	* creating 2014.08.rc release branch

2014-08-06  Ben Chaco  <bchaco@x3-c.com>

	* src/e-hal/Makefile:
	Link libmemman.a
	* src/e-hal/src/epiphany-hal-data.h:
	* src/e-hal/src/epiphany-hal.h:
	* src/e-hal/src/epiphany-shm-manager.c (int e_shm_init):
	(int e_shm_alloc):
	(int e_shm_attach):
	(int e_shm_release):
	(shm_alloc_region):
	(shm_compact_heap):
	Added memory manager for shm allocations
	* src/e-memman/Makefile:
	* src/e-memman/include/memman.h:
	* src/e-memman/src/memman.c (int memman_init):
	(void *memman_alloc):
	(static void coalesce):
	(void memman_free):
	Initial import
	* src/e-utils/e-trace/src/a_trace.c (int trace_init):
	(int trace_read_n):
	Don't set loader verbosity, set host verbosity to H_D0

2014-08-05  Ben Chaco  <bchaco@x3-c.com>

	* src/e-hal/src/epiphany-hal-data.h:
	* src/e-hal/src/epiphany-shm-manager.c (int e_shm_init):
	(void e_shm_finalize):
	(int e_shm_alloc):
	(int e_shm_attach):
	(int e_shm_release):
	Moved shm lock semaphore definition out of the shm_table
	strucuture and into a global variable

	* src/e-lib/Makefile:
	Removed -O3 optimization level option from EXTRACFLAGS
	
2014-07-17  Ben Chaco  <bchaco@x3-c.com>

	* build-libs.sh:
	Changed default EPIPHANY_PREFIX from "e-" to "epiphany-elf-". 
	Removed explicit CROSS_COMPILE variable from the Make command so
	that the environment variable will be used. Tabified the script
	to remove mixed uses of TAB characters and whitespace.

2014-06-12  Ben Chaco  <bchaco@x3-c.com>

	* src/e-hal/src/epiphany-hal.c (int e_init):
	(int e_open):
	(int e_alloc):
	(int ee_read_esys):
	(ssize_t ee_write_esys):
	(int e_reset_system):
	Removed test for root privs, use /dev/epiphany for memory mapping,
	Fixed return value checks from open() syscall.
	* src/e-utils/e-hw-rev/e-hw-rev.c (int main):
	(int e_close):